WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28674
background-size fails to parse if a single length/percentage/auto is followed by a comma
https://bugs.webkit.org/show_bug.cgi?id=28674
Summary
background-size fails to parse if a single length/percentage/auto is followed...
mitz
Reported
2009-08-23 22:33:35 PDT
WebKit successfully parses “background-size: 100px;", but fails to parse “background-size: 100px, 200px 300px;”. The comma confuses parseFillSize(). Patch forthcoming.
Attachments
Patch
(6.47 KB, patch)
2009-08-23 22:40 PDT
,
mitz
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2009-08-23 22:40:07 PDT
Created
attachment 38466
[details]
Patch
mitz
Comment 2
2009-08-24 09:27:31 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/47716
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug