WebCore: background-size fails to parse if a single length/percentage/auto is followed by a comma https://bugs.webkit.org/show_bug.cgi?id=28674

Reviewed by Simon Fraser.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseFillSize): Added an allowComma parameter,
    which is set to false when this method consumes a comma. Moved
    handling of 'contain' and 'cover' from parseFillProperty into this
    method.
(WebCore::CSSParser::parseFillProperty): Set allowComma to true before
    processing the next value, and pass allowComma to parseFillSize.
* css/CSSParser.h:

LayoutTests:
background-size fails to parse if a single length/percentage/auto is followed by a comma
https://bugs.webkit.org/show_bug.cgi?id=28674

Reviewed by Simon Fraser.

* fast/backgrounds/size/parsing-background-size-values-expected.txt:
* fast/backgrounds/size/resources/parsing-background-size-values.js:



Canonical link: https://commits.webkit.org/39295@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47716 268f45cc-cd09-0410-ab3c-d52691b4dbfc