WebCore/css/CSSParser.cpp
@@ -2236,9 +2236,14 @@ void CSSParser::parseFillPosition(RefPtr<CSSValue>& value1, RefPtr<CSSValue>& va
         value1.swap(value2);
 }
 
-PassRefPtr<CSSValue> CSSParser::parseFillSize()
+PassRefPtr<CSSValue> CSSParser::parseFillSize(bool& allowComma)
 {
+    allowComma = true;
     CSSParserValue* value = m_valueList->current();
+
+    if (value->id == CSSValueContain || value->id == CSSValueCover)
+        return CSSPrimitiveValue::createIdentifier(value->id);
+
     RefPtr<CSSPrimitiveValue> parsedValue1;
     
     if (value->id == CSSValueAuto)
@@ -2253,6 +2258,8 @@ PassRefPtr<CSSValue> CSSParser::parseFillSize()
     if ((value = m_valueList->next())) {
         if (value->id == CSSValueAuto)
             parsedValue2 = CSSPrimitiveValue::create(0, CSSPrimitiveValue::CSS_UNKNOWN);
+        else if (value->unit == CSSParserValue::Operator && value->iValue == ',')
+            allowComma = false;
         else {
             if (!validUnit(value, FLength|FPercent, m_strict))
                 return 0;
@@ -2295,6 +2302,7 @@ bool CSSParser::parseFillProperty(int propId, int& propId1, int& propId2,
             m_valueList->next();
             allowComma = false;
         } else {
+            allowComma = true;
             switch (propId) {
                 case CSSPropertyBackgroundColor:
                     currValue = parseBackgroundColor();
@@ -2377,14 +2385,9 @@ bool CSSParser::parseFillProperty(int propId, int& propId1, int& propId2,
                     break;
                 case CSSPropertyBackgroundSize:
                 case CSSPropertyWebkitMaskSize: {
-                    if (val->id == CSSValueContain || val->id == CSSValueCover) {
-                        currValue = CSSPrimitiveValue::createIdentifier(val->id);
+                    currValue = parseFillSize(allowComma);
+                    if (currValue)
                         m_valueList->next();
-                    } else {
-                        currValue = parseFillSize();
-                        if (currValue)
-                            m_valueList->next();
-                    }
                     break;
                 }
             }
@@ -2411,7 +2414,6 @@ bool CSSParser::parseFillProperty(int propId, int& propId1, int& propId2,
                 else
                     value2 = currValue2.release();
             }
-            allowComma = true;
         }
         
         // When parsing any fill shorthand property, we let it handle building up the lists for all
